# taskplan

./: .cirrus.yml  README.md  bors.toml  planner.py  pyproject.toml  setup.cfg
taskplan/: __init__.py  cli.py  task.py  task_list.py  version.py
tests/: test_main.py
