[build-system]
# Specify the required build system.
# Setuptools 40.9.0+ requirement is necessary to get rid of setup.py; see
#  https://github.com/pypa/setuptools/pull/1675
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bork.zipapp]
enabled = true
main = "taskplan.cli:main"

[tool.bork.aliases]
# Runs *only* pylint. (Not the actual tests.)
lint = "pytest -k 'pylint' --pylint --verbose"
# Runs tests and pylint.
test = "pytest --pylint --verbose"
