[metadata]
name = taskplan
version = attr: taskplan.__version__
author = attr: taskplan.__author__
author_email = me@duckie.co
description = weather thingy
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/duckinator/taskplan
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.5

[options.extras_require]
build =
    bork==5.0.0
    pip==20.2.3
    setuptools==50.3.0
    wheel==0.35.1

testing =
    bork==5.0.0
    pytest==6.0.2
    pylint==2.6.0
    pytest-pylint==0.17.0
    freezegun

[options.entry_points]
console_scripts =
    taskplan = taskplan.cli:main
